# smarthome-ci

./: .env  .env.example  .gitignore  CMakeLists.txt  mqtt_subscriber.c  run.sh
src/: main.c
src/data_base/: data_base.c  data_base.h
src/helpers/config/: config.c  config.h
src/mqtt_subscriber/: mqtt_event.h  mqtt_subscriber.c  mqtt_subscriber.h
src/mqtt_subscriber/mqtt_data/: mqtt_event.h  mqtt_queue.c  mqtt_queue.h  worker.c  worker.h
src/mqtt_subscriber/mqtt_queue/: mqtt_queue.c  mqtt_queue.h
src/mqtt_subscriber/mqtt_stores/mqtt_temperature_store/: mqtt_temperature_store.c  mqtt_temperature_store.h
src/mqtt_subscriber/mqtt_worker/: mqtt_worker.c  mqtt_worker.h
